NTP-3325 fix buggen under skapa/ändra användare
(cherry picked from commit c1915c2af7cc0575a6c77968218f5af1eb3cff7e)